# ml_Yakunicheva

./: .gitignore  README.md  pyproject.toml
homeworks/HW01/: HW01.ipynb
homeworks/HW02/: HW02.ipynb
homeworks/HW03/eda-cli/: README.md  pyproject.toml
homeworks/HW04/eda-cli/: .gitignore  README.md  pyproject.toml
homeworks/HW05/: HW05.ipynb
homeworks/HW06/: HW06.ipynb  report.md
homeworks/HW06/artifacts/: best_model.joblib  best_model_meta.json  metrics_test.json  search_summaries.json
homeworks/HW07/: HW07.ipynb  report.md
homeworks/HW07/artifacts/: best_configs.json  metrics_summary.json
homeworks/HW08-09/: HW08-09.ipynb  report.md
homeworks/HW08-09/artifacts/: best_config.json  runs.csv
homeworks/HW12/: HW-12.ipynb  report.md
homeworks/HW12/artifacts/: best_gru.pt  best_gru_config.json  runs.csv
homeworks/HW13/: HW13.ipynb  hw13.ipynb  report.md
homeworks/HW13/artifacts/: sample_predictions.csv
homeworks/HW14/: HW14.ipynb  recipes.csv  report.md
homeworks/HW14/artifacts/: rag_examples.csv  retrieval_before_after_update.csv  retrieval_eval.csv
project/: .dockerignore  README.md  docker-compose.yml  dockerfile  report.md  requirements.txt  self-checklist.md
project/artifacts/: README.md
project/artifacts/metrics/: final_comparison.csv
project/configs/: .env.example  README.md
project/data/: README.md
project/notebooks/: 01_eda_ogyeiv2.ipynb  02_train_compare.ipynb  02_train_compare_learning.ipynb  README.md
project/src/: README.md  api.py  config.py  model_utils.py
project/tests/: README.md
(+11 files in other folders)
